# twype-voice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.prod.yaml  compose.yaml  package.json  pyproject.toml
apps/agent/: pyproject.toml
apps/agent/src/: agent.py  chat_utils.py  crisis.py  datachannel.py  db.py  dual_layer_parser.py  emotional_analyzer.py  languages.py  llm.py  localization.py  main.py  prompts.py  rag.py  settings.py  silence_timer.py  stt.py  transcript.py  tts.py
apps/agent/tests/: conftest.py  test_agent_session.py  test_crisis.py  test_datachannel.py  test_dual_layer_parser.py  test_emotional_analyzer.py  test_llm.py  test_main.py  test_noise_cancellation.py  test_prompts.py  test_rag.py  test_settings.py  test_silence_timer.py  test_stt.py  test_thinking_sounds.py  test_transcript.py  test_tts.py
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 1e4c9b7f6a2d_agent_config_locale.py  6f8a2c1b9d4e_crisis_contacts_and_message_flag.py  7c4f3d2e16b1_tts_config_voice_id_unique.py  a3d5e7f9b1c2_rename_singular_tables_to_plural.py  b6a8d4f9c2e1_knowledge_chunk_vector_indexes.py  c9fe2269439f_initial_schema.py  e2b3c4d5f6a7_knowledge_sources_unique_title_type.py
apps/api/src/: database.py  knowledge_constants.py  localization.py  main.py
apps/api/src/auth/: dependencies.py  email.py  exceptions.py  jwt.py  router.py  service.py
apps/api/src/crisis_contacts/: router.py  service.py
apps/api/src/knowledge_ingestion/: __init__.py  chunking.py  embeddings.py  extractors.py  loader.py  manifest.py  pipeline.py  types.py
apps/api/src/models/: __init__.py  agent_config.py  crisis_contact.py  knowledge_chunk.py  knowledge_source.py  message.py  session.py  tts_config.py  user.py
apps/api/src/schemas/: auth.py  crisis_contacts.py  sessions.py  sources.py
apps/api/src/sessions/: dependencies.py  exceptions.py  livekit.py  router.py  service.py  settings.py
apps/api/src/sources/: __init__.py  router.py  service.py
apps/api/tests/: conftest.py  helpers.py  knowledge_test_utils.py  test_auth.py  test_crisis_contacts.py  test_ingest_script.py  test_knowledge_chunking.py  test_knowledge_embeddings.py  test_knowledge_extractors.py  test_knowledge_ingest_e2e.py  test_knowledge_loader.py  test_knowledge_manifest.py  test_livekit_token.py  test_seed.py  test_sessions.py  test_sources.py  test_testsupport_postgres.py
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
configs/: litellm.yaml  livekit.yaml
configs/caddy/: Caddyfile  Caddyfile.prod
configs/coturn/: turnserver.conf
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.web  docker-compose.dev.yml  docker-compose.yml
docs/: about.md  architecture.md  plan.md  specs.md
docs/explorations/: 2026-03-05-tts-integration-inworld-elevenlabs-livekit.md
scripts/: ingest.py  seed.py
tests/e2e/: __init__.py  conftest.py  helpers.py  livekit_room.py  test_auth_flow.py  test_bilingual.py  test_crisis_protocol.py  test_proactive.py  test_session_flow.py  test_session_history.py  test_source_attribution.py  test_text_chat.py
testsupport/: __init__.py  postgres.py
(+287 files in other folders)
