[project]
name = "twype-voice"
version = "0.1.0"
description = "Interactive AI agent specializing in expert topics"
requires-python = ">=3.13"

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["apps/api", "apps/agent"]

[tool.uv.sources]
twype-api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "RUF",   # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107"]
"**/tests/**" = ["S101", "S105", "S106", "S107"]
"apps/*/src/**" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["apps/api"]
