[project]
name = "twype-agent"
version = "0.1.0"
description = "Twype LiveKit Voice Agent"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents>=1.4.4",
    "livekit-plugins-elevenlabs>=1.4.3",
    "livekit-plugins-inworld>=1.4.4",
    "livekit-plugins-deepgram>=1.3.12",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-openai>=1.3.12",
    "livekit-plugins-silero>=1.3.12",
    "pydantic-settings>=2.10.1",
    "twype-api",
]
